--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3137,27 +3137,27 @@ header.major > :first-child:after {
 			}
 
 		#banner.style1:after {
-			background-color: #6fc3df;
+			background-color: #ffe600;
 		}
 
 		#banner.style2:after {
-			background-color: #8d82c4;
+			background-color: #ff002b;
 		}
 
 		#banner.style3:after {
-			background-color: #ec8d81;
+			background-color: #01ffd5;
 		}
 
 		#banner.style4:after {
-			background-color: #e7b788;
+			background-color: #00c3ff;
 		}
 
 		#banner.style5:after {
-			background-color: #8ea9e8;
+			background-color: #0400ff;
 		}
 
 		#banner.style6:after {
-			background-color: #87c5a4;
+			background-color: #ff0a0a;
 		}
 
 		body.is-preload #banner:after {
